# glad-wrap

./: .gitignore  CMakeLists.txt
include/bw/: oglwrap.h
include/bw/glad/: binding.h  bindings.h  bitfield.h  blending.h  buffer-inl.h  buffer.h  buffer_binding.h  buffer_handle.h  capabilities.h  clearing.h  config.h  drawing.h  framebuffer.h  glad.h  handle.h  program.h  program_binding.h  program_handle.h  rasterization.h  renderbuffer.h  shader.h  shader_handle.h  texture.h  uniform.h  vertex-attribute.h  vertex_array.h  vertex_array_binding.h  vertex_array_handle.h  vertex_attribute.h  viewport.h
include/bw/glad/bindings/: buffer_binding.h  framebuffer_binding.h  program_binding.h  renderbuffer_binding.h  texture_binding.h  vertex_array_binding.h
include/bw/glad/enums/: blend_function.h  boolean.h  buffer_binding.h  buffer_select_bit.h  buffer_type.h  buffer_usage.h  capability.h  data_type.h  framebuffer_attachment.h  framebuffer_target.h  index_type.h  mag_filter.h  min_filter.h  pixel_data_format.h  pixel_data_internal_format.h  pixel_date_type.h  poly_mode.h  primitive_type.h  shader_type.h  texture_type.h  texture_unit.h  wrap_mode.h
include/bw/glad/handles/: buffer_handle.h  framebuffer_handle.h  handle.h  program_handle.h  renderbuffer_handle.h  (+3 more)
include/bw/oglwrap/: bitfield.h  buffer.h  buffer_binding.h  buffer_handle.h  capabilities.h  clearing.h  config.h  gl_handle.h  glfw.h  oglwrap.h  program.h  program_handle.h  shader.h  shader_handle.h  uniform-inl.h  uniform.h  vertex-attribute.h  vertex_array.h  vertex_array_handle.h  viewport.h
(+7 files in other folders)
